GridView: Set content position when changing cell size

Content size was calculated before the new data was applied.
This caused problems when calculating the column count while
resizing the window.

Pick-to: 5.15
Pick-to: 6.2
Fixes: QTBUG-92998
Change-Id: Ia4401c0e34cd11dc9e6c24a0320dbf0ca2f59ab9
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>